chore: changed more implementations ot support java 8